# aya-examples

tc/: Dockerfile  kubernetes.yaml  values.yaml
tc-bytes/tc-bytes/: Cargo.toml
tc-bytes/tc-bytes-ebpf/: Cargo.toml
tc-bytes/tc-bytes-ebpf/src/: main.rs
tc-bytes/tc-bytes/src/: main.rs
tc-perfbuf/: Dockerfile
tc-perfbuf/tc-perfbuf/: Cargo.toml
tc-perfbuf/tc-perfbuf-common/src/: lib.rs
tc-perfbuf/tc-perfbuf-ebpf/: Cargo.toml
tc-perfbuf/tc-perfbuf-ebpf/src/: main.rs  main_old.rs
tc-perfbuf/tc-perfbuf/src/: error.rs  main.rs
tc-perfbuf/xtask/src/: build_ebpf.rs
tc/tc/: Cargo.toml
tc/tc-ebpf/src/: main.rs
tc/tc/src/: main.rs
