[package]
name = "tc-bytes"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch = "main" ,features=["async_tokio"] }
aya-log = "0.1"
tc-bytes-common = { path = "../tc-bytes-common", features=["user"] }
anyhow = "1.0.42"
clap = { version = "3.1", features = ["derive"] }
log = "0.4"
simplelog = "0.12"
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
libc = "0.2"

[[bin]]
name = "tc-bytes"
path = "src/main.rs"
